# controllers/user.js
@@ -4,22 +4,8 @@ const { appError, validationError } = require('../services/error');
 const asyncHandleError = require('../services/async-handle-error');
 
 const user = {
+  // 註冊會員
   register: asyncHandleError(async (req, res, next) => {
-    /**
-     * #swagger.tags = ['Users']
-     * #swagger.summary = '註冊會員'
-     */
-    /**
-      #swagger.parameters['parameter_name'] = {
-        in: 'body',
-        description: '會員資料',
-        schema: {
-          $name: '暱稱',
-          $email: 'test@gmail.com',
-          $password: '123456',
-        }
-      }
-     */
     const {
       body: { name, email, password },
     } = req;
@@ -37,19 +23,8 @@ const user = {
     if (exist) return next(validationError(400, 'email', '此 Email 已被註冊'));
 
     const user = await User.create({ name, email, password });
-    /**
-      #swagger.responses[200] = {
-        description: '註冊會員成功',
-        schema: { $ref: '#/definitions/Users' }
-      }
-     */
+
     res.status(200).json(getHttpResponseContent(user));
-    /**
-      #swagger.responses[400] = {
-        description: '註冊會員失敗',
-        schema: { $ref: '#/definitions/Error' }
-      }
-     */
   }),
 };
 
